examples/test/testpolicy4410.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4410
  namespace: namespace46
spec:
  podSelector:
    matchLabels:
      key26: value6
      key46: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value6
          key11: value38
          key45: value31
      podSelector:
        matchLabels:
          key48: value36
